<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QueryActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/lgbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/logout"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="4dp" />

    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/edittext_line_1"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/nameinp"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edittext_line_2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_line_1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="14dp"

        android:layout_marginTop="23dp"
        android:hint="@string/enter_amount"
        android:inputType="number" />

    <Button
        android:id="@+id/button_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/edittext_line_1"
        android:layout_marginStart="50dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@id/edittext_line_1"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/insert" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button_insert"
        android:layout_alignTop="@+id/edittext_line_2"
        android:text="@string/save" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/button_save"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"

        android:background="@android:color/darker_gray" />

</RelativeLayout>